# venice-ai

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.xml  app.py  debug_test.py  debug_test2.py  debug_test3.py  mypy.ini  pyproject.toml  pyproject.toml.bak  test_runner.py
.github/workflows/: python-publish.yaml
docs/: api.rst  async_chat_streaming_guide.rst  client_utilities.rst  conf.py  index.rst  requirements.txt  test_utilities.rst
e2e_tests/: benchmark_01_chat_latency.py  benchmark_02_image_gen_time.py  conftest.py  test_01_models.py  test_02_chat_completions.py  test_03_image.py  test_04_api_keys.py  test_04_audio.py  test_05_embeddings.py  test_06_audio.py  test_07_billing.py  test_08_characters.py  test_09_client_config.py
e2e_tests/utils/: helpers.py
src/venice_ai/: __init__.py  _async_client.py  _client.py  _client_with_retries.py  _constants.py  _resource.py  costs.py  exceptions.py  streaming.py  utils.py
src/venice_ai/resources/: __init__.py  api_keys.py  audio.py  billing.py  characters.py  embeddings.py  image.py  models.py
src/venice_ai/resources/chat/: __init__.py  completions.py
src/venice_ai/types/: __init__.py  api_keys.py  audio.py  billing.py  characters.py  chat.py  embeddings.py  image.py  models.py
tests/: __init__.py  conftest.py  test_api_keys_coverage_improvements.py  test_async_client.py  test_async_client_coverage_additional.py  test_async_client_coverage_improved.py  test_async_client_extended.py  test_async_client_json_error_handling.py  test_async_client_multipart.py  test_async_client_translate_httpx_error_coverage.py  test_audio.py  test_billing.py  test_characters_coverage.py  test_chat_completions_coverage_improvements.py  test_chat_resource.py  test_client.py  test_client_coverage.py  test_client_coverage_additional.py  test_client_coverage_improved.py  test_client_enhanced.py  test_client_extended.py  test_client_get_model_pricing.py  test_client_http_config.py  test_client_missed_lines_coverage.py  test_client_multipart.py  test_client_pydantic_casting_errors.py  test_client_translate_httpx_error_coverage.py  test_client_with_retries.py  test_costs.py  test_costs_coverage.py  test_e2e_helpers.py  test_embeddings.py  test_embeddings_additional_coverage.py  test_embeddings_api_alignment.py  test_embeddings_coverage.py  test_embeddings_enhanced.py  test_exceptions.py  test_exceptions_combined.py  test_exceptions_coverage.py  test_exceptions_coverage_additional.py  (+15 more)
tests/resources/: __init__.py  test_api_keys_async.py  test_api_keys_async_missed_lines.py  test_api_keys_sync.py  test_audio.py  test_audio_async.py  test_audio_sync.py  test_billing.py  test_billing_async.py  test_billing_sync.py  test_characters.py  test_characters_async.py  test_characters_sync.py  test_chat_completions_async.py  test_chat_completions_sync.py  test_chat_resource_coverage.py  test_embeddings_async.py  test_embeddings_sync.py  test_image.py  test_image_async.py  test_image_async_missed_lines.py  test_image_coverage.py  test_image_enhanced.py  test_image_sync.py  test_image_sync_missed_lines.py  test_models_async.py  test_models_async_missed_lines.py  test_models_sync.py
tests/resources/chat/: __init__.py  test_completions_async.py  test_completions_sync.py  test_completions_sync_missed_lines.py
tests/unit/: test_embeddings.py  test_image.py  test_utils.py
tests/unit/resources/: __init__.py
tests/unit/resources/chat/: __init__.py  test_completions.py  test_completions_non_streaming.py
